--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,12 +65,34 @@ jobs:
       - name: 🚫 Ignore _worker.js in assets
         run: echo "_worker.js" > dist/.assetsignore
       
-      - name: 🚀 Deploy to Cloudflare Workers
+      - name: 🗄️ Run Database Migrations
         run: |
           echo "Installing wrangler..."
           npm install -g wrangler@latest
-          echo "Deploying to Cloudflare Workers..."
-          wrangler deploy
+          echo "Running migrations..."
+          wrangler d1 execute leger-db --file=./db/migrations/0001_initial.sql --remote || echo "⚠️ Migration may have already run (this is OK)"
+          echo "Verifying tables..."
+          wrangler d1 execute leger-db --remote --command="SELECT name FROM sqlite_master WHERE type='table';"
+          echo "✅ Database ready"
+        env:
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+      
+      - name: 🔐 Set Worker Secrets
+        run: |
+          echo "Installing wrangler..."
+          npm install -g wrangler@latest
+          echo "Setting ENCRYPTION_KEY secret..."
+          echo "${{ secrets.ENCRYPTION_KEY }}" | wrangler secret put ENCRYPTION_KEY
+          echo "Setting JWT_SECRET secret..."
+          echo "${{ secrets.JWT_SECRET }}" | wrangler secret put JWT_SECRET
+          echo "✅ Secrets configured"
+        env:
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+      
+      - name: 🚀 Deploy to Cloudflare Workers
+        run: wrangler deploy
         env:
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
