moving rjsf components to _future to avoid build errors

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,7 @@ jobs:
       
       - name: 📥 Install dependencies
         run: |
-          rm -f package-lock.json
-          npm install
+          npm ci 
       
       - name: 🎨 Build brand kit
         run: |
