--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,9 @@ coverage/
 # Misc
 .turbo
 .vercel
+
+# Future features not in v0.1.0
+src/_future/
+
+# Future features not in v0.1.0
+src/_future/
