--- a/package.json
+++ b/package.json
@@ -37,11 +37,15 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@rjsf/core": "^5.15.0",
+    "@rjsf/utils": "^5.15.0",
+    "@rjsf/validator-ajv8": "^5.15.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.20.0",
     "sonner": "^1.3.1",
     "tailwind-merge": "^1.14.0",
